--- a/eParty/eParty.csproj
+++ b/eParty/eParty.csproj
@@ -126,6 +126,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\EmailUtils.cs" />
+    <Compile Include="Utils\MapUtils.cs" />
+    <Compile Include="Utils\StringUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\admin\calendar\css\fullcalendar.css" />
