--- a/eParty/Web.config
+++ b/eParty/Web.config
@@ -15,12 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 	<connectionStrings>
-		<add name="DefaultConnection"
-			 providerName="System.Data.SqlClient"
-			 connectionString="Data Source=.;
-                         Initial Catalog=PartyServDb;
-                         Integrated Security=True;
-                         MultipleActiveResultSets=True;Connect Timeout=30" />
+		<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;                          Initial Catalog=PartyServDb;                          Integrated Security=True;                          MultipleActiveResultSets=True;Connect Timeout=30;        Encrypt=False;TrustServerCertificate=True" />
 	</connectionStrings>
 
 
