--- a/eParty/Web.config
+++ b/eParty/Web.config
@@ -23,8 +23,16 @@
 
 	<system.web>
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="51200" />
   </system.web>
+	<system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="52428800" />
+        </requestFiltering>
+    </security>
+    
+    </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
