--- a/eParty/Web.config
+++ b/eParty/Web.config
@@ -15,9 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
 	<connectionStrings>
-		<add name="DefaultConnection" providerName="System.Data.SqlClient"
-     connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PartyServDb;User ID=sa;Password=123;MultipleActiveResultSets=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True" />
-
+		<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;                          Initial Catalog=PartyServDb;                          Integrated Security=True;                          MultipleActiveResultSets=True;Connect Timeout=30;        Encrypt=False;TrustServerCertificate=True" />
 	</connectionStrings>
 
 
