--- a/eParty/packages.config
+++ b/eParty/packages.config
@@ -5,6 +5,9 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="jQuery" version="3.7.0" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
@@ -26,6 +29,7 @@
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Identity.UI" version="9.0.10" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.JsonPatch" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Localization" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Mvc" version="2.2.0" targetFramework="net472" />
@@ -58,6 +62,7 @@
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Microsoft.DiaSymReader.Native" version="1.7.0" targetFramework="net472" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Tools" version="9.0.10" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
@@ -78,11 +83,17 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Net.Compilers" version="4.0.1" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Net.Http.Headers" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.3" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.3" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json.Bson" version="1.0.1" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="QRCoder" version="1.7.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
