--- a/eParty/eParty.csproj
+++ b/eParty/eParty.csproj
@@ -589,6 +589,7 @@
     <Compile Include="Models\UserDiscount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\MenuService.cs" />
+    <Compile Include="Service\PartyService.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utils\EmailUtils.cs" />
     <Compile Include="Utils\MapUtils.cs" />
