--- a/eParty/packages.config
+++ b/eParty/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="5.2.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="EPPlus" version="4.5.3.3" targetFramework="net472" />
   <package id="jQuery" version="3.7.0" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net472" />
